force-app/main/default/objects/JP_Document_Information__c/JP_Document_Information__c.object-meta.xml
<CustomObject>
    <description>日本国内の書類送付先（唄）</description>
    <label>書類送付先</label>
    <nameField>
        <label>書類送付先</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>