force-app/main/default/objects/JP_Document_Information__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>書類送付先</relationshipLabel>
    <relationshipName>member_auction_JP_Document_Information</relationshipName>
    <type>Lookup</type>
</CustomField>