force-app/main/default/objects/JP_Document_Information__c/fields/Memo_Document__c.field-meta.xml
<CustomField>
    <fullName>Memo_Document__c</fullName>
    <label>メモ（書類送付先）</label>
    <type>TextArea</type>
</CustomField>