force-app/main/default/objects/JP_Document_Information__c/fields/send_domestic_address2__c.field-meta.xml
<CustomField>
    <fullName>send_domestic_address2__c</fullName>
    <label>以降住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>