force-app/main/default/objects/JP_Document_Information__c/fields/send_domestic_address__c.field-meta.xml
<CustomField>
    <fullName>send_domestic_address__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>