force-app/main/default/objects/JP_Document_Information__c/fields/send_mail__c.field-meta.xml
<CustomField>
    <fullName>send_mail__c</fullName>
    <label>送付先Email</label>
    <type>Email</type>
</CustomField>