force-app/main/default/objects/JP_Document_Information__c/fields/send_postal_code__c.field-meta.xml
<CustomField>
    <fullName>send_postal_code__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>