force-app/main/default/objects/JP_Document_Information__c/fields/send_tant_nm__c.field-meta.xml
<CustomField>
    <fullName>send_tant_nm__c</fullName>
    <label>担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>