force-app/main/default/objects/JP_Document_Information__c/fields/send_tel_no__c.field-meta.xml
<CustomField>
    <fullName>send_tel_no__c</fullName>
    <label>送付先電話番号</label>
    <type>Phone</type>
</CustomField>