force-app/main/default/objects/JP_Document_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>send_tant_nm__c</columns>
    <columns>send_postal_code__c</columns>
    <columns>send_domestic_address__c</columns>
    <columns>send_domestic_address2__c</columns>
    <columns>send_tel_no__c</columns>
    <columns>send_mail__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>